plugins {
  id 'java'
  id 'application'
}

group = 'ntalbs'
version = '0.0.1'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(25)
  }
}

repositories {
  mavenCentral()
}

ext {
  vertxVersion = '5.0.4'
  junitJupiterEngineVersion = '5.13.4'
  log4jVersion = '2.25.2'
}

application {
  mainClass = 'ntalbs.reflexive.ReflexiveMain'
}

dependencies {
  implementation "io.vertx:vertx-core:$vertxVersion"
  implementation "io.vertx:vertx-web:$vertxVersion"
  implementation "org.apache.logging.log4j:log4j-api:$log4jVersion"
  implementation "org.apache.logging.log4j:log4j-core:$log4jVersion"

  testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitJupiterEngineVersion"
  testImplementation "org.junit.jupiter:junit-jupiter-api:$junitJupiterEngineVersion"
  testImplementation "io.vertx:vertx-junit5:$vertxVersion"
}

test {
  useJUnitPlatform()
  testLogging {
    events 'PASSED', 'FAILED', 'SKIPPED'
  }
}
